--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,104 @@
+:root {
+  font-size: 24px;
+}
+
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #222;
+  color: #ddd;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.Center, .App {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  position: fixed;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  text-shadow: 2px 2px 8px #000000cc;
+}
+
+.App {
+  background-size: cover;
+}
+
+.Clock {
+  font-size: 4em;
+}
+
+.Date {
+  font-size: 1em;
+}
+
+.Options {
+  text-align: left;
+  position: fixed;
+  top: 1rem;
+  left: 6rem;
+  font-size: .7em;
+  width: fit-content;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 2;
+  padding: .5rem;
+  border-radius: .5rem;
+}
+
+.OptionsButton {
+  top: 1rem;
+  left: 1rem;
+  position: fixed;
+  z-index: 1;
+  font-size: .8em;
+  padding: .2rem .4rem;
+}
+
+.ClockAndDate {
+  padding: 1rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: .8rem;
+  min-width: 30%;
+}
+
+.Arrows {
+  position: fixed;
+  z-index: 1;
+  bottom: 1rem;
+  right: 2rem;
+  font-size: 5em;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  width: 15%;
+  justify-content: space-between;
+}
+
+.Arrow:link {
+  text-decoration: none;
+  color: white;
+}
+
+.Arrow:visited {
+  text-decoration: none;
+  color: white;
+}
+
+.Arrow:hover {
+  text-decoration: none;
+  color: white;
+}
+
+.Arrow:active {
+  text-decoration: none;
+  color: white;
 }
